src/yini_test/cases/golden/lenient/valid/concatenation/string-plus-boolean.yini
@yini

^ Concat
enabledLabel = "enabled-" + true
disabledLabel = "disabled-" + no
