src/yini_test/cases/golden/lenient/invalid/concatenation/object-concatenation.yini
@yini

^ Concat
object = { value: "a" } + { value: "b" }
